# episim

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
configurations/: example_config1.ron
configurations/example_conf/: core.cfg
configurations/other_example_conf/: core.cfg
export/: example_config1.ron_2022-07-29_00-31-47.csv  example_config1.ron_2022-07-29_00-32-28.csv  example_config1.ron_2022-07-29_00-36-57.csv  example_config1.ron_2022-07-29_00-37-38.csv  example_config1.ron_2022-07-29_00-38-23.csv  example_config1.ron_2022-07-29_00-40-43.csv  example_config1.ron_2022-07-29_00-46-01.csv  example_config1.ron_2022-07-29_12-00-28.csv  example_config1.ron_2022-07-29_12-06-00.csv  example_config1.ron_2022-07-29_12-07-36.csv
export/example_conf_2022-08-08_22-19-29/: data.csv
export/example_conf_2022-08-09_13-05-53/: data.csv
export/example_conf_2022-08-09_13-09-16/: core.cfg  data.csv
export/example_conf_2022-08-09_13-10-04/: core.cfg  data.csv
export/other_example_conf_2022-08-08_22-13-35/: data.csv
export/other_example_conf_2022-08-09_13-07-35/: core.cfg  data.csv
export/other_example_conf_2022-08-09_19-39-55/: core.cfg  data.csv
src/: entity.rs  hospital.rs  main.rs  progress_bar.rs  simulator.rs  unsafe_array.rs
src/config/: age_distribution.rs  age_pdf.rs  config.rs  core.rs  mod.rs
src/graphics/: mod.rs  nographics.rs  renderer.rs
src/hospital/: hospital.rs  mod.rs  patient.rs
src/runner/: mod.rs  nographics.rs  runner.rs
src/statistics/: data_point.rs  dataframe.rs  demographics.rs  mod.rs
src/util/: mod.rs  (+1 more)
(+5 files in other folders)
