[package]
name = "episim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quadtree = { path = "../quadtree" }
vector = { path = "../vector" }
rand = { version = "0.8.5", features = ["std_rng"] }
rand_distr = "0.4.3"
num_cpus = "1.13.1"
ron = "0.7.1"
serde = { version = "1.0.139", features = ["serde_derive"] }
lazy_static = "1.4.0"
crossbeam = "0.8.1"
gl = "0.14.0"
sdl2 = "0.35.1"
rusty_gl = { path = "../rustyGL" }